--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,23 @@
   <main class="dashboard">
     <div class="dashboard_container">
       <div class="dashboard_project">
-        <h3>Project options:</h3>
-        <button type="button" class="dashboard_project-btn edit" id="editProjectBtn">
-          Edit Name
-        </button>
-        <button type="button" class="dashboard_project-btn remove" id="removeProjectBtn">
-          Delete
-        </button>
+        <div class="dashboard_project-options">
+          <h3>Project options:</h3>
+          <button type="button" class="dashboard_project-btn edit" id="editProjectBtn">
+            Edit Name
+          </button>
+          <button type="button" class="dashboard_project-btn remove" id="removeProjectBtn">
+            Delete
+          </button>
+        </div>
+        <div class="dashboard_project-create-todo">
+          <button type="button" class="dashboard_create-todo-btn add" id="createTodoBtn">
+            Add Todo
+          </button>
+        </div>
+      </div>
+      <div class="dashboard_todos">
+
       </div>
     </div>
   </main>
